Fixed bug where linkedin redirect was not working on mobile. problem was with container dimensions overlapping.

--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -56,7 +56,7 @@
 
   .signatureAnimation {
     max-width: 100%;
-    padding-bottom: 50px;
+    padding-bottom: 0px;
   }
 
   .socialIconsContainer {
@@ -64,7 +64,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -120px;
+    margin-top: -70px;
     margin-bottom: 90px;
   }
 
